pods/enginx.yml
apiVersion: v1
kind: Pod
metadata:
  name: probe
spec: 
  containers: 
    - name: nginx
      image: nginx:1.13.6
      livenessProbe:
        httpGet:
          port: 80
          path: "/"
