pods/exim.yml
apiVersion: v1
kind: Pod
metadata: 
  name: exim
spec:
  containers:
    - name: exim
      image: dodemoorg/exim:1.3
      volumeMounts:
        - mountPath: /var/log/exim4
          name: logs
    - name: filebeats
      image: doodemoorg/eximbeats:1.3
      volumeMounts:
        - mountPath: /var/log/exim4
          name: logs
  volumes:
    - name: logs
      emptyDir: {}
