pods/octopress.yml
apiVersion: v1
kind: Pod
metadata:
  name: octopress
spec: 
  containers:
    - name: web
      image: nginx:1.13.6
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: docroot
  volumes:
    - name: docpress
      emptyDir: {}
